--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,14 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": "^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
-        "psr-0": {
-            "Sail": "src/"
+        "psr-4": {
+            "Sail\\": "src/Sail/"
         }
     }
 }
